--- a/js/react/pc_rent__back/package.json
+++ b/js/react/pc_rent__back/package.json
@@ -2,7 +2,7 @@
   "name": "pc_rent",
   "version": "1.0.0",
   "description": "",
-  "main": "queries.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.3",
+    "express-mysql-session": "^3.0.0",
+    "express-session": "^1.18.0",
     "mysql2": "^3.9.2"
   }
 }
